objects/POC_Request_Form_History__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POC_Action_Performed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Engagement_Status__c</fullName>
        <label>POC Engagement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Request_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Request Id</label>
        <referenceTo>POC_Engagement_Request__c</referenceTo>
        <relationshipLabel>POC Request Form Histories</relationshipLabel>
        <relationshipName>POC_Request_Form_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Stage__c</fullName>
        <label>POC Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_User_Type__c</fullName>
        <label>POC User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POC_Request_Form_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POC Request Form History</label>
    <nameField>
        <label>POC Request Form History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Request Form Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>